; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_15150.c_new_decode_dev.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_15150.c_new_decode_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @new_decode_dev(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = and i32 %5, 1048320
  %7 = ashr i32 %6, 8
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  %9 = and i32 %8, 255
  %10 = load i32, i32* %2, align 4
  %11 = ashr i32 %10, 12
  %12 = and i32 %11, 1048320
  %13 = or i32 %9, %12
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @MKDEV(i32 %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @MKDEV(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
